fix map not (re)loading by moving loader out to App. Add a media query for page height

--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -4,3 +4,9 @@
   height: 70vh;
   min-height: -webkit-fill-available;
 }
+
+@media (min-width: 768px) {
+  .container {
+    height: 100vh;
+  }
+}
