add speed and activity to info panel. A bit of CSS

--- a/frontend/src/components/InfoPanel.module.css
+++ b/frontend/src/components/InfoPanel.module.css
@@ -1,28 +1,40 @@
 .infoPanel {
   position: absolute;
   width: 200px;
-  /* height: 100px; */
   top: 200px;
   right: 100px;
   background-color: #0f0f23;
   z-index: 999;
   border: 1px solid #29abe2;
   font-family: 'Roboto Mono', monospace;
+  padding: 15px;
 }
 
-h1, h2 {
+h1, h2, h3 {
   font-weight: 100;
+  margin: 0;
+}
+
+h3 {
+  margin-top: 5px;
+}
+
+p {
+  margin: 0;
+  font-size: 12px;
+  color: #29abe2;
 }
 
 .avatar {
   display: flex;
   align-items: center;
+  margin: 20px 0;
 }
 
 .avatarImage {
   width: 50px;
   height: 50px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   display: block;
   /* margin-top: 20px; */
   /* margin-bottom: 20px; */
